<resources>
    <string name="app_name">Student Support</string>
    <string name="bottom_nav_btn_1">Home</string>
    <string name="bottom_nav_btn_2">Terms</string>
    <string name="bottom_nav_btn_3">Courses</string>
    <string name="bottom_nav_btn_4">Assessments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_term_btn">Add term</string>
    <string name="home_main_text">To get started, add a new term.</string>
    <string name="term_name_hint">Term No.</string>
    <string name="term_name_label">Term Name</string>
    <string name="submit_text">Submit</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>