<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_new_term"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CalendarView
        android:id="@+id/term_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/term_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/term_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/term_name_label"
        app:layout_constraintEnd_toEndOf="@+id/term_date_picker" />

    <TextView
        android:id="@+id/term_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/term_name_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/start_date"
        app:layout_constraintEnd_toStartOf="@+id/term_name_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/term_date_picker"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/term_date_picker"
        app:layout_constraintTop_toBottomOf="@+id/term_date_picker" />

    <EditText
        android:id="@+id/start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/start_date_hint"
        android:inputType="date"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/term_date_picker"
        app:layout_constraintEnd_toStartOf="@+id/end_date"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/term_date_picker"
        app:layout_constraintTop_toBottomOf="@+id/term_name_label" />

    <EditText
        android:id="@+id/end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/end_date_hint"
        android:inputType="date"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/start_date"
        app:layout_constraintEnd_toEndOf="@+id/term_date_picker"
        app:layout_constraintStart_toEndOf="@+id/start_date"
        app:layout_constraintTop_toTopOf="@+id/start_date" />

</androidx.constraintlayout.widget.ConstraintLayout>
