<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".activity.NewCourseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/course_name_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Course Name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/course_name_input"
                    app:layout_constraintEnd_toStartOf="@+id/course_name_input"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/course_name_input"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="Course Name"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/course_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="@string/start_date_hint"
                    android:inputType="date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/course_end_date"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/course_name_label" />

                <EditText
                    android:id="@+id/course_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="@string/end_date_hint"
                    android:inputType="date"
                    app:layout_constraintBaseline_toBaselineOf="@+id/course_start_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/course_start_date" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="311dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/course_mentor_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Course Mentor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/mentor_name_input"
                    app:layout_constraintEnd_toStartOf="@+id/mentor_name_input"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/mentor_name_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/course_mentor_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="Mentor Phone"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/course_mentor_phone_input"
                    app:layout_constraintEnd_toEndOf="@+id/course_mentor_name"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/course_mentor_phone_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="Phone"
                    android:inputType="phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mentor_name_input" />

                <TextView
                    android:id="@+id/course_mentor_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Mentor Email"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/course_mentor_email_input"
                    app:layout_constraintEnd_toStartOf="@+id/course_mentor_email_input"
                    app:layout_constraintStart_toStartOf="@+id/course_mentor_phone" />

                <EditText
                    android:id="@+id/course_mentor_email_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/course_mentor_phone_input" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/course_mentor_email_input"
                    app:layout_constraintStart_toStartOf="@+id/course_mentor_email"
                    app:layout_constraintTop_toBottomOf="@+id/course_mentor_email_input"
                    android:checkedButton="@id/status_in_progress">

                    <RadioButton
                        android:id="@+id/status_in_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="In Prog."
                        android:onClick="onRadioButtonClick"
                        />

                    <RadioButton
                        android:id="@+id/status_completed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Completed"
                        android:onClick="onRadioButtonClick"/>

                    <RadioButton
                        android:id="@+id/status_dropped"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dropped"
                        android:onClick="onRadioButtonClick"/>

                    <RadioButton
                        android:id="@+id/status_planned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Planned"
                        android:onClick="onRadioButtonClick"/>
                </RadioGroup>

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/submit_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/radioGroup"
                    app:layout_constraintStart_toStartOf="@+id/radioGroup"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>